# DLCoal

./: .gitignore  README.md  bilstm_model.py  cnn_model.py  concept_val.ipynb  data_simulator.py  dlcoalsim_dataset_generator.py  evaluate_all_models.py  hybrid_model.py  mlp_model.py  msprime.ipynb  pyproject.toml  simple.py  train_hybrid.py  transformer_hybrid_model.py  transformer_model.py
data/templates/: README.md
data/templates/human_ne/: README.md  msmc2_yoruba_french_within_ne_normalized.csv  msmc_im_yoruba_french_ne_normalized.csv  phlash_fig7b_superpopulations.csv  phlash_superpopulations_normalized.csv
maps/: README.md
maps/mut_map/: README.md
maps/mut_map/output/per_chrom/: chr13_roulette_mu_1000bp.bed  chr14_roulette_mu_1000bp.bed  chr15_roulette_mu_1000bp.bed  chr16_roulette_mu_1000bp.bed  chr17_roulette_mu_1000bp.bed  chr18_roulette_mu_1000bp.bed  chr19_roulette_mu_1000bp.bed  chr20_roulette_mu_1000bp.bed  chr21_roulette_mu_1000bp.bed  chr22_roulette_mu_1000bp.bed
maps/mut_map/script/: download_and_process.py
maps/recomb_map/: README.md
maps/recomb_map/output/: palsson_2025_autosomes_hg38.bed
maps/recomb_map/script/: process.py
scripts/: dataset_admin.py
simulator/: __init__.py  cli.py  config.py  dataset_files.py  demography.py  empirical_maps.py  maps.py  ne_templates.py  noise.py  sample.py  shards.py  stdpopsim_support.py  utils.py
