[project]
name = "dlcoal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=9.3.0",
    "matplotlib>=3.10.3",
    "msprime>=1.3.4",
    "numpy>=2.1.3",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "tensorflow>=2.19.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
